--- a/calculadora_casio.html
+++ b/calculadora_casio.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>CALCULATOR CASIO</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/media_query.css">
 </head>
 
 <body>
