agrego funcion para limitar la cantidad de digitos en el display.

--- a/calculadora_casio.html
+++ b/calculadora_casio.html
@@ -13,8 +13,10 @@
 <body>
     <main>
         <div>
-            <!-- imagenes de los botones numericos -->
+            <!-- imagen calculadora -->
             <img src="css/images/casio.jpg" alt="casio calculator" id="casio">
+
+            <!-- imagenes de los botones numericos -->
             <img src="css/images/btn_0.jpg" alt="boton 0" id="btn_0" class="btn">
             <img src="css/images/btn_1.jpg" alt="boton 1" id="btn_1" class="btn">
             <img src="css/images/btn_2.jpg" alt="boton 2" id="btn_2" class="btn">
@@ -50,6 +52,7 @@
             <div id="main_display"></div>
             <div id="aux_display"></div>
         </div>
+
     </main>
     <!-- importante el orden de los dos primeros  -->
     <script src="js/referencias.js"></script> <!-- 1 -->
