--- a/calculadora_casio.html
+++ b/calculadora_casio.html
@@ -5,12 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="Description" content="calculadora">
+    <meta name="theme-color" content="#514757"/>
+
     <title>CALCULATOR CASIO</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/media_query.css">
-</head>
+    <link rel="manifest" href="manifest.json">
+ </head>
 
-<body>
+<body class="no-select">
+    <noscript>
+        <h1>Javascript esta deshabilitado</h1>
+    </noscript>
     <main>
         <div>
             <!-- imagen calculadora -->
@@ -51,16 +59,17 @@
             <div id="main_display"></div>
             <div id="aux_display"></div>
         </div>
-
     </main>
-    <!-- importante el orden de los dos primeros  -->
-    <script src="js/referencias.js"></script> <!-- 1 -->
-    <script src="js/display.js"></script> <!-- 2 -->
-    <script src="js/main.js"></script> <!-- 3 -->
-    <script src="js/buttons.js"></script> <!-- 4 -->
-    <script src="js/memory.js"></script> <!-- 5 -->
-    <script src="js/functions.js"></script> <!-- 6 -->
-    <script src="js/listeners.js"></script> <!-- 7 -->
+
+    <script src="js/app.js"></script>
+    <script src="sw.js"></script>
+    <script src="js/referencias.js"></script>
+    <script src="js/display.js"></script>
+    <script src="js/main.js"></script>
+    <script src="js/buttons.js"></script>
+    <script src="js/memory.js"></script>
+    <script src="js/functions.js"></script>
+    <script src="js/listeners.js"></script>
 </body>
 
 </html>
