--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
     <script src="js/memory.js"></script>
     <script src="js/functions.js"></script>
     <script src="js/listeners.js"></script>
+    <script src="js/efectos.js"></script>
 </body>
 
 </html>
