--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/media_query.css">
     <link rel="manifest" href="manifest.json">
+    <link rel="apple-touch-icon" href="css/images/icons/icon-512x512.png">
  </head>
 
 <body class="no-select">
